# utopic-package-manager

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: ci.yml  python-publish.yml
node/: utopic-chat.ts
python/utopic/: __init__.py  _native.py  acp.py  bridge.py  chat.py  cli.py  core_loader.py  gateway.py  installer.py  mcp.py  models.json  models.py  server.py
python/utopic/cmake/: CMakeLists.txt  image_engine_disabled.cpp
python/utopic/core/native/: CPP_BEST_PRACTICES.md  NOTICE.md  SERVER.md  SUPPORTED_MODELS.md  artifact_runner_common.cpp  artifact_runner_common.h  audio_engine.cpp  audio_engine.h  diffusion_driver.cpp  diffusion_driver.h  image_engine.cpp  image_engine.h  image_runner.cpp  main.cpp  mcp_server.cpp  runner.cpp  runner_contract.cpp  runner_contract.h  runner_plugin.cpp  runner_plugin.h  runner_plugin_api.h  runner_tasks.cpp  runner_tasks.h  server.cpp  sherpa_tts_plugin.cpp  tool_extract.h  utopic_core.h  utopic_identity.h  video_engine.cpp  video_engine.h
python/utopic/core/native/core/: ace_step.cpp  ace_step.h  ace_step_native.cpp  ace_step_native.h  hidream_o1_block.cpp  hidream_o1_block.h  hidream_o1_native.cpp  hidream_o1_native.h
python/utopic/core/native/tools/: hidream_o1_native_manifest.cpp  utopic_ace.cpp  utopic_hidream_o1.cpp
python/utopic/core/python/utopic_core/: __init__.py  _native.py  bridge.py  chat.py  cli.py  gateway.py  installer.py  mcp.py  models.json  models.py  native_runner.py  runtime_env.py
python/utopic/core/python/utopic_core/node/: utopic-chat.js
python/utopic/core/python/utopic_core/runner_contract/v1/: chat_request.json  response_schema.json  schema.json
python/utopic/native/: CMakeLists.txt  NOTICE.md  SERVER.md  SUPPORTED_MODELS.md  acp_server.cpp  mcp_server.cpp  schema_utils.h  utopic_identity.h
python/utopic/node/: utopic-chat.js
python/utopic/patches/: llama.cpp-utopic.patch
scripts/: vendor_core.py
tests/: test_bridge_adapters.py  test_cli_commands.py  test_core_catalog.py  test_core_mcp_tools.py  test_installer_backend.py  test_native_entrypoints.py  test_native_runner_binary_smoke.py  test_native_runner_contract.py  test_node_chat_tui.py  test_package_metadata.py  test_packaging.py  test_runtime_gateway.py
