[build-system]
requires = [
  "setuptools>=69",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "utopic"
version = "0.1.1"
description = "Python package manager for the Utopic native runtime"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Utopic contributors" },
]
keywords = ["diffusion", "llm", "gguf", "llama.cpp", "inference"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/adavyas/utopic-package-manager"
Source = "https://github.com/adavyas/utopic-package-manager"
NativeRuntime = "https://github.com/adavyas/utopic"

[project.scripts]
utopic = "utopic.cli:main"
utopic-server = "utopic.server:main"
utopic-mcp = "utopic.mcp:main"
utopic-acp = "utopic.acp:main"

[tool.setuptools.packages.find]
where = ["python"]
