[build-system]
requires = [
  "setuptools>=69",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "utopic"
version = "0.1.8"
description = "Python package manager for the Utopic native runtime"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
authors = [
  { name = "Utopic contributors" },
]
keywords = ["diffusion", "llm", "gguf", "llama.cpp", "inference"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/adavyas/utopic-package-manager"
Source = "https://github.com/adavyas/utopic-package-manager"
NativeRuntime = "https://github.com/adavyas/utopic"

[project.scripts]
utopic = "utopic.cli:main"
utopic-runtime = "utopic.gateway:main"
utopic-bridge = "utopic.bridge:main"
utopic-server = "utopic.server:main"
utopic-mcp = "utopic.mcp:main"
utopic-acp = "utopic.acp:main"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
utopic = [
  "cmake/**/*",
  "core/native/**/*",
  "core/python/**/*",
]

[tool.setuptools.exclude-package-data]
utopic = [
  "core/python/**/__pycache__/*",
  "core/python/**/*.pyc",
  "core/python/**/*.pyo",
  "core/python/**/*.pyd",
  "**/__pycache__/*",
  "**/*.pyc",
  "**/*.pyo",
  "**/*.pyd",
]

[tool.utopic]
native-ref = "7e554b1d4f1b1dc9955eac1813781eec9b69fd68"
