[build-system]
requires = [
  "setuptools>=69",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "utopic"
version = "0.1.8"
description = "Python package manager for the Utopic native runtime"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "Apache-2.0"
authors = [
  { name = "Utopic contributors" },
]
keywords = ["diffusion", "llm", "gguf", "llama.cpp", "inference"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/adavyas/utopic-package-manager"
Source = "https://github.com/adavyas/utopic-package-manager"
NativeRuntime = "https://github.com/adavyas/utopic"

[project.scripts]
utopic = "utopic.cli:main"
utopic-runtime = "utopic.gateway:main"
utopic-bridge = "utopic.bridge:main"
utopic-server = "utopic.server:main"
utopic-mcp = "utopic.mcp:main"
utopic-acp = "utopic.acp:main"

[project.optional-dependencies]
image = [
  "diffusers>=0.35.0",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "transformers>=4.56.0",
  "accelerate>=1.0.0",
  "safetensors>=0.4.5",
]
tts = [
  "kokoro>=0.9.0",
  "soundfile>=0.12.0",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "transformers>=4.56.0",
  "accelerate>=1.0.0",
  "safetensors>=0.4.5",
]
chatterbox = [
  "chatterbox-tts>=0.1.0",
  "setuptools<81",
  "soundfile>=0.12.0",
]
music = [
  "soundfile>=0.12.0",
  "torch>=2.6.0",
  "torchcodec>=0.8.0",
  "torchaudio>=2.6.0",
]
video = [
  "diffusers>=0.35.0",
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "transformers>=4.56.0",
  "accelerate>=1.0.0",
  "safetensors>=0.4.5",
  "imageio>=2.34.0",
  "imageio-ffmpeg>=0.5.0",
]
bridge = [
  "accelerate>=1.0.0",
  "diffusers>=0.35.0",
  "imageio-ffmpeg>=0.5.0",
  "imageio>=2.34.0",
  "kokoro>=0.9.0",
  "safetensors>=0.4.5",
  "soundfile>=0.12.0",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchcodec>=0.8.0",
  "torchvision>=0.21.0",
  "transformers>=4.56.0",
]
all = [
  "accelerate>=1.0.0",
  "diffusers>=0.35.0",
  "imageio-ffmpeg>=0.5.0",
  "imageio>=2.34.0",
  "kokoro>=0.9.0",
  "safetensors>=0.4.5",
  "soundfile>=0.12.0",
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchcodec>=0.8.0",
  "torchvision>=0.21.0",
  "transformers>=4.56.0",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
utopic = [
  "cmake/*",
  "core/native/*",
  "core/native/core/*",
  "core/native/tools/*",
  "core/python/utopic_core/*",
  "core/python/utopic_core/node/*",
]

[tool.utopic]
native-ref = "468029ba538d49dadef388c024e4426e2be19afb"
